# arkadisti

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
arkadisti/: config_manager.py  games_model.py  main_window.py  results_model.py  scraper.py  screenshot_window.py  settings_dialog.py  storage_manager.py
arkadisti/res/: arkadisti.qrc
arkadisti/ui/: main_window.ui  screenshot_window.ui
